# tldraw-desktop

src/: README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/public/: index.html
src/src/: fonts.css  index.css  index.js
