[package]
authors = ["steveruizok", "Tim_Paik"]
build = "src/build.rs"
default-run = "tldraw-desktop"
description = "A tiny little drawing app."
edition = "2018"
license = "MPL2"
name = "tldraw-desktop"
repository = ""
version = "0.1.0"

[build-dependencies]
tauri-build = {version = "1.0.0-beta.4"}

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.0.0-beta.8", features = ["api-all", "dialog-all", "http-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
